samples/ut/overloading/signed/IntFail01.err
IntFail01.z2(5, 9): error: class 'IntFail01' does not have an overload
	test(Int)
existing overloads
	test(Byte)
	test(Word)
	test(DWord)
	test(QWord)
	test(Small)
	test(Short)
	test(Float)
	test(Char)
	test(PtrSize)